# time

./: .gitignore  Makefile.am  NEWS  README  bootstrap.conf  cfg.mk  configure.ac
doc/: .gitignore  local.mk  time.texi
src/: local.mk  resuse.c  resuse.h  rusage-kb.c  rusage-kb.h  system.h  time.c
tests/: help-version.sh  init.sh  local.mk  time-aux.c  time-environment.sh  time-exit-codes.sh  time-format-T.sh  time-max-rss.sh  time-posix-quiet.sh  time-trailing-backslash.sh  time-verbose.sh
